fix(style): header icon tab misalignment

--- a/client/src/pages/components/cards.scss
+++ b/client/src/pages/components/cards.scss
@@ -180,6 +180,8 @@
     }
 
     & .user-card__icon {
+      display: grid;
+      align-items: center;
       align-self: center;
       border-radius: 0;
     }
